@@ -1,3 +1,7 @@
+2001-07-17  Bradford Hovinen  <hovinen@ximian.com>
+
+	* Makefile.am (EXTRA_DIST): Added missing icons_DATA
+
 2001-07-17  Chema Celorio  <chema@celorio.com>
 
 	* Makefile.am ($(desktop).in): desktop.in.in -> desktop.in ->desktop
